configs/external-services/envoy.yaml
admin:
  address:
    socket_address:
      address: "::1"
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: "::"
          port_value: 10080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: external_services
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/clipy"
                          route:
                            cluster: clippy_local
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/auth"
                          route:
                            cluster: auth_local
                            prefix_rewrite: "/"
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: clippy_local
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clippy_local
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "::1"
                      port_value: 8080
    - name: auth_local
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: auth_local
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "::1"
                      port_value: 8081
